# pyqode.python

./: .gitignore  README.rst  conftest.py  deploy.bat  pho-pyqode.code-workspace  pyproject.toml  setup.py
examples/: custom.py  preconfigured.py
examples/modes/: autocomplete.py  autoindent.py  calltips.py  comments.py  goto.py  pep8.py  pyflakes.py  syntax_highlighter.py
examples/panels/: quick_doc.py  symbol_browser.py
examples/pynotepad/pynotepad/: __init__.py  main_window.py  settings.py
examples/pynotepad/pynotepad/forms/: main_window_ui.py  resources_rc.py
examples/widgets/: console.py  interactive_console.py  outline.py
pyqode/python/: __init__.py
pyqode/python/backend/: workers.py
pyqode/python/modes/: autoindent.py  calltips.py  comments.py  goto_assignements.py  indenter.py
pyqode/python/panels/: quick_doc.py  symbol_browser.py
pyqode/python/widgets/: code_edit.py  console.py  interactive.py
test/: helpers.py  test_folding.py
test/test_modes/: test_autocomplete.py  test_autoindent.py  test_calltips.py  test_comments.py  test_goto_assignments.py  test_outline.py
test/test_panels/: test_quick_doc.py  test_symbol_browser.py
test/test_widgets/: test_code_edit.py
